--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.6",
+    "multer": "^2.0.1",
     "vr-store": "file:"
   },
   "devDependencies": {
