--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.6",
     "multer": "^2.0.1",
+    "nodemailer": "^7.0.6",
     "vr-store": "file:"
   },
   "devDependencies": {
