--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^8.2.1",
+    "http-status-codes": "^2.3.0",
+    "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.9.6",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.6",
+    "socket.io": "^4.8.1",
     "vr-store": "file:"
   },
   "devDependencies": {
